// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MonthPicker disabled 1`] = `
<Styled(div)>
  <Styled(div)
    isActive={true}
    isDisabled={false}
    key="Январь"
    onClick={[Function]}
  >
    Январь
  </Styled(div)>
  <Styled(div)
    isActive={false}
    isDisabled={false}
    key="Февраль"
    onClick={[Function]}
  >
    Февраль
  </Styled(div)>
  <Styled(div)
    isActive={false}
    isDisabled={false}
    key="Март"
    onClick={[Function]}
  >
    Март
  </Styled(div)>
  <Styled(div)
    isActive={false}
    isDisabled={true}
    key="Апрель"
    onClick={[Function]}
  >
    Апрель
  </Styled(div)>
  <Styled(div)
    isActive={false}
    isDisabled={false}
    key="Май"
    onClick={[Function]}
  >
    Май
  </Styled(div)>
  <Styled(div)
    isActive={false}
    isDisabled={false}
    key="Июнь"
    onClick={[Function]}
  >
    Июнь
  </Styled(div)>
  <Styled(div)
    isActive={false}
    isDisabled={false}
    key="Июль"
    onClick={[Function]}
  >
    Июль
  </Styled(div)>
  <Styled(div)
    isActive={false}
    isDisabled={false}
    key="Август"
    onClick={[Function]}
  >
    Август
  </Styled(div)>
  <Styled(div)
    isActive={false}
    isDisabled={false}
    key="Сентябрь"
    onClick={[Function]}
  >
    Сентябрь
  </Styled(div)>
  <Styled(div)
    isActive={false}
    isDisabled={false}
    key="Октябрь"
    onClick={[Function]}
  >
    Октябрь
  </Styled(div)>
  <Styled(div)
    isActive={false}
    isDisabled={false}
    key="Ноябрь"
    onClick={[Function]}
  >
    Ноябрь
  </Styled(div)>
  <Styled(div)
    isActive={false}
    isDisabled={false}
    key="Декабрь"
    onClick={[Function]}
  >
    Декабрь
  </Styled(div)>
</Styled(div)>
`;

exports[`MonthPicker does not crash 1`] = `
<Styled(div)>
  <Styled(div)
    isActive={true}
    isDisabled={false}
    key="Январь"
    onClick={[Function]}
  >
    Январь
  </Styled(div)>
  <Styled(div)
    isActive={false}
    isDisabled={false}
    key="Февраль"
    onClick={[Function]}
  >
    Февраль
  </Styled(div)>
  <Styled(div)
    isActive={false}
    isDisabled={false}
    key="Март"
    onClick={[Function]}
  >
    Март
  </Styled(div)>
  <Styled(div)
    isActive={false}
    isDisabled={false}
    key="Апрель"
    onClick={[Function]}
  >
    Апрель
  </Styled(div)>
  <Styled(div)
    isActive={false}
    isDisabled={false}
    key="Май"
    onClick={[Function]}
  >
    Май
  </Styled(div)>
  <Styled(div)
    isActive={false}
    isDisabled={false}
    key="Июнь"
    onClick={[Function]}
  >
    Июнь
  </Styled(div)>
  <Styled(div)
    isActive={false}
    isDisabled={false}
    key="Июль"
    onClick={[Function]}
  >
    Июль
  </Styled(div)>
  <Styled(div)
    isActive={false}
    isDisabled={false}
    key="Август"
    onClick={[Function]}
  >
    Август
  </Styled(div)>
  <Styled(div)
    isActive={false}
    isDisabled={false}
    key="Сентябрь"
    onClick={[Function]}
  >
    Сентябрь
  </Styled(div)>
  <Styled(div)
    isActive={false}
    isDisabled={false}
    key="Октябрь"
    onClick={[Function]}
  >
    Октябрь
  </Styled(div)>
  <Styled(div)
    isActive={false}
    isDisabled={false}
    key="Ноябрь"
    onClick={[Function]}
  >
    Ноябрь
  </Styled(div)>
  <Styled(div)
    isActive={false}
    isDisabled={false}
    key="Декабрь"
    onClick={[Function]}
  >
    Декабрь
  </Styled(div)>
</Styled(div)>
`;
